--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <!-- slider Item 1 -->
                 <li data-index="rs-1" data-transition="fadetotopfadefrombottom" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"  data-title="N.Agency" data-description="">
-                  <img src="img/slider/" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                  <img src="img/slider/zenbg1.png" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
                   <!-- LAYER NR. 1 -->
                   <div class="tp-caption NotGeneric-Title tp-resizeme white-color rs-parallaxlevel-3" 
@@ -189,11 +189,11 @@
                 </li>
 
                 <!-- slider Item 2 -->
-                <!-- <li data-index="rs-3" data-transition="slideremoveright" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"> -->
-                  <!-- <img src="img/slider/s3.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina> -->
+                <li data-index="rs-3" data-transition="slideremoveright" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off">
+                  <img src="img/slider/zenbg2.png"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
                 <!-- LAYER NR. 1 -->
-                  <!-- <div class="tp-caption NotGeneric-Title tp-resizeme black-color rs-parallaxlevel-3" 
+                  <div class="tp-caption NotGeneric-Title tp-resizeme black-color rs-parallaxlevel-3" 
                     id="slide-2-layer-1" 
                     data-x="['left','left','left','left']" data-hoffset="['0','50','0','0']" 
                     data-y="['middle','middle','middle','middle']" data-voffset="['-100','-100','-100','-85']" 
@@ -213,10 +213,10 @@
                     data-responsive_offset="on" 
                     data-elementdelay="0.05"                    
                     style="z-index: 5; white-space: nowrap;">Smart, Creative, Powerful
-                  </div> -->
+                  </div>
 
                   <!-- LAYER NR. 2 -->
-                  <!-- <div class="tp-caption tp-resizeme NotGeneric-Text black-color rs-parallaxlevel-4" 
+                  <div class="tp-caption tp-resizeme NotGeneric-Text black-color rs-parallaxlevel-4" 
                     id="slide-2-layer-2" 
                     data-x="['left','left','left','left']" data-hoffset="['0','50','0','0']" 
                     data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','-10']"
@@ -235,10 +235,10 @@
                     data-splitout="none" 
                     data-responsive_offset="on"                   
                     style="z-index: 6;">Words should be smart, creative, and powerful. <br>I am a skilled, qualified copywriter, with extensive experience of the education sector. <br> Ready to make your brand vision into a seductive sentence.
-                  </div> -->
+                  </div>
 
                   <!-- LAYER NR. 3 -->
-                  <!-- <div class="tp-caption rs-parallaxlevel-5" 
+                  <div class="tp-caption rs-parallaxlevel-5" 
                     id="slide-2-layer-3" 
                     data-x="['left','left','left','left']" data-hoffset="['0','50','0','0']" 
                     data-y="['middle','middle','middle','middle']" data-voffset="['105','105','115','85']" 
@@ -260,11 +260,11 @@
                     style=""><a data-scroll href='#portfolio' class='btn btn-main btn-black'>View Projects</a>
                   </div>          
                 
-                </li> -->
+                </li>
 
                 <!-- slider Item 3 -->
                 <li data-index="rs-2" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off">
-                  <img alt="" class="rev-slidebg" data-bgparallax="3" data-bgposition="center center" data-duration="5000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="110" src="img/slider/tania2.png">
+                  <img alt="" class="rev-slidebg" data-bgparallax="3" data-bgposition="center center" data-duration="5000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="110" src="img/slider/zenbg3.png">
 
                   <!-- LAYER NR. 1 -->
                   <div class="tp-caption NotGeneric-Title tp-resizeme white-color rs-parallaxlevel-3" 
